--- a/src/static/css/contact.css
+++ b/src/static/css/contact.css
@@ -38,7 +38,7 @@ input[type="submit"]:hover {
   bottom: 5%;
   left: -50%;
   max-width: 400px;
-  overflow: hidden;
+  z-index: 2;
 }
 
 #contact-popup textarea {
