--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -82,11 +82,4 @@
   .project .project-description, .project .award-description {
     display: block;
   }
-
-  #helper {
-    position: absolute;
-    top: calc(50% + 20px);
-    left: calc(50% + 96px);
-    opacity: 0;
-  }
 }
